update collar,sleeve and page,search with product