@@ -1,60 +1,58 @@
 package com.example.demo.service.impl;
 
 import com.example.demo.dto.ProductDTO;
-import com.example.demo.entity.Brand;
-import com.example.demo.entity.Category;
-import com.example.demo.entity.Product;
-import com.example.demo.entity.ProductDetail;
-import com.example.demo.repository.BrandRepo;
-import com.example.demo.repository.CategoryRepo;
-import com.example.demo.repository.ProductDetailRepo;
-import com.example.demo.repository.ProductRepo;
+import com.example.demo.entity.*;
+
+import com.example.demo.repository.*;
+
+import com.example.demo.response.ProductResponse;
 import com.example.demo.service.ProductService;
-import org.springframework.beans.factory.annotation.Autowired;
+import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
+@RequiredArgsConstructor
 public class ProductServiceImpl implements ProductService {
-    @Autowired
-    private CloudinaryServiceImpl cloudinaryService;
-    @Autowired
-    private ProductDetailRepo productDetailRepo;
-    @Autowired
-    ProductRepo productRepo;
-    @Autowired
-    CategoryRepo categoryRepo;
-    @Autowired
-    BrandRepo brandRepo;
+    private final BrandRepo brandRepo;
+    private final CloudinaryServiceImpl cloudinaryService;
+    private final ProductDetailRepo productDetailRepo;
+    private final ProductRepo productRepo;
+    private final CategoryRepo categoryRepo;
+    private final CollarRepo collarRepo;
+    private final SleeveRepo sleeveRepo;
     @Override
-    public List<ProductDTO> getAll() {
-        return productRepo.findAll().stream().map(ProductDTO::convertDTO).collect(Collectors.toList());
+    public List<ProductResponse> getAll() {
+        return productRepo.findAll().stream().map(product -> ProductResponse.convertResponse(product)).toList();
     }
 
     @Override
-    public ProductDTO createdProduct(ProductDTO productDTO) {
+    public ProductResponse createdProduct(ProductDTO productDTO) {
       try {
-          Product product = productRepo.save(ProductDTO.convertProduct(productDTO,categoryRepo,brandRepo));
-          return ProductDTO.convertDTO(product);
+          Product product = productRepo.save(ProductDTO.convertProduct(productDTO,categoryRepo,brandRepo,collarRepo,sleeveRepo));
+          return ProductResponse.convertResponse(product);
       }catch (Exception e){
           throw new RuntimeException("Failed to add product"+e.getMessage());
       }
     }
 
     @Override
-    public ProductDTO updatedProduct(int id,ProductDTO productDTO) {
+    public ProductResponse updatedProduct(int id,ProductDTO productDTO) {
         Product product = productRepo.findById(id).orElseThrow(()->new RuntimeException("product not found"));
+        Collar collar = collarRepo.findByName(productDTO.getCollarName()).orElseThrow(()->new RuntimeException("not found collar's name:"+productDTO.getCollarName()));
+        Sleeve sleeve = sleeveRepo.findByName(productDTO.getCollarName()).orElseThrow(()->new RuntimeException("not found sleeve's name:"+productDTO.getSleeveName()));
         product.setCode(productDTO.getCode());
         product.setName(productDTO.getName());
         product.setImage(productDTO.getImage());
         product.setPrice(productDTO.getPrice());
-        product.setCollar(productDTO.getCollar());
-        product.setSleeve(productDTO.getSleeve());
+        product.setCollar(collar);
+        product.setSleeve(sleeve);
         product.setDescription(productDTO.getDescription());
         Optional<Brand> brand = brandRepo.findByName(productDTO.getBrandName());
         if(brand.isEmpty()){
@@ -67,7 +65,7 @@ public class ProductServiceImpl implements ProductService {
         }
         product.setCategory(category.get());
         Product pr = productRepo.save(product);
-        return ProductDTO.convertDTO(pr);
+        return ProductResponse.convertResponse(pr);
     }
 
     @Override
@@ -86,18 +84,25 @@ public class ProductServiceImpl implements ProductService {
 
     @Override
     public void deletedProduct(Integer id) {
-        for (ProductDTO productDTO: productRepo.findAll().stream().map(ProductDTO::convertDTO).toList()
+        for (ProductResponse productResponse: productRepo.findAll().stream().map(ProductResponse::convertResponse).toList()
              ) {
-            if(productDTO.getId().equals(id)){
+            if(productResponse.getId().equals(id)){
                 productRepo.deleteById(id);
             }
         }
     }
 
     @Override
-    public ProductDTO findById(Integer id) {
-        return productRepo.findById(id).map(ProductDTO::convertDTO).get();
+    public ProductResponse findById(Integer id) {
+        return productRepo.findById(id).map(ProductResponse::convertResponse).get();
     }
+
+    @Override
+    public Page<ProductResponse> pageAllProducts(Integer categoryId, String productName, Integer sleeveId, Integer collarId, Integer brandId, Double price, String description, Pageable pageable) {
+        Page<Product> productPage = productRepo.pageAllProducts(categoryId, productName, sleeveId, collarId, brandId, price, description, pageable);
+        return productPage.map(ProductResponse::convertResponse);
+    }
+
 
     @Override
     public List<ProductDetail> getProductDetailsByProductId(Integer productId) {
